<resources>
    <string name="app_name">OutfitRandomizer</string>
    <string name="brand_logo_main_desc">Large Closet Genie Logo</string>
    <string name="tagline_main_1_text">PERSONAL\nSTYLIST</string>
    <string name="tagline_main_2_text"><![CDATA[& Wardrobe]]></string>
    <string name="brand_logo_small_desc">Small Closet Genie Logo</string>
    <string name="header_login_text">Hello,\nWelcome Back!</string>
    <string name="subhead_login_text">Sign in to continue</string>
    <string name="username_login_hint">Username</string>
    <string name="password_login_hint">Password</string>
    <string name="btn_forgot_pass_login_text">Forgot Password?</string>
    <string name="btn_signin_login_text">SIGN IN</string>
    <string name="btn_signup_login_text">New User Sign Up</string>
    <string name="header_signup_text">Create Account</string>
    <string name="subhead_signup_text">to start generating Outfits!</string>
    <string name="username_signup_hint">Username</string>
    <string name="phone_num_signup_hint">Phone Number</string>
    <string name="email_signup_hint">Email</string>
    <string name="password_signup_hint">Password</string>
    <string name="password_conf_signup_hint">Confirm Password</string>
    <string name="btn_create_acc_signup_text">Create Account</string>
    <string name="btn_login_signup_text">Existing User Login</string>
    <string name="profile_image_userProfile_desc">User Profile Image</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="category_text_addItem">Category</string>
    <string name="cancel_button_text_addItem">Cancel</string>
    <string name="image_preview_text_addItem">New Item Image Preview</string>
    <string name="item_name_text_addItem">Item Name</string>
    <string name="save_button_text_addItem">Save</string>
    <string name="take_photo_button_text_addItem">Take Photo</string>
    <string name="welcome_text_homePage">Hello, Welcome!</string>
    <string name="username_text_homePage">Username</string>
    <string name="favorites_header_text_homePage">Favorites</string>
    <string name="search_hint_text_homePage">Search</string>
    <string name="empty_message_text_homePage">No Outits Favorited.</string>
    <string name="instructions_text_camera">Place clothing item on a solid background in center of frame, then capture.</string>
    <string name="jacket_image_description_generator">Randomly Selected Jacket</string>
    <string name="shirt_image_description_generator">Randomly Selected Jacket</string>
    <string name="pants_image_description_generator">Randomly Selected Jacket</string>
    <string name="shoes_image_description_generator">Randomly Selected Jacket</string>
    <string name="lock_jacket_button_description_generator">Lock Jacket Button</string>
    <string name="lock_shirt_button_description_generator">Lock Shirt Button</string>
    <string name="lock_pants_button_description_generator">Lock Pants Button</string>
    <string name="lock_shoes_button_description_generator">Lock Shoes Button</string>
    <string name="generate_outfit_button_description_generator">Generate Outfit Button</string>
    <string name="generate_button_image_description_generator">Generate Button Image</string>
    <string name="save_button_description_generator">Save Button</string>
    <string name="outfit_name_hint_generator">Outfit Name</string>
    <string name="cancel_button_text_generator">Cancel</string>
    <string name="save_button_text_generator">Save</string>
    <string name="jacket_image_description_outfitDetails">Jacket Image</string>
    <string name="shirt_image_description_outfitDetails">Shirt Image</string>
    <string name="pants_image_description_outfitDetails">Pants Image</string>
    <string name="shoes_image_description_outfitDetails">Shoes Image</string>
    <string name="outfit_name_text_outfitDetails">Outfit Name</string>
    <string name="outfit_saved_date_text_outfitDetails">Outfit Saved Date</string>
    <string name="edit_name_button_text_outfitDetails">Edit Name</string>
    <string name="delete_outfit_button_text_outfitDetails">Delete Outfit</string>
    <string name="back_button_description_outfitDetails">Back Button</string>
    <string name="favorite_button_description_outfitDetails">Favorite Button</string>
    <string name="search_hint_outfits">Search</string>
    <string name="outfits_header_text_outfits">Outfits</string>
    <string name="empty_message_text_outfits">No Outfits Saved.</string>
    <string name="username_text_userProfile">User Name</string>
    <string name="email_text_userProfile">sample@email.com</string>
    <string name="hanger_image_description_userProfile">Hanger Image</string>
    <string name="outfits_text_userProfile">Outfits</string>
    <string name="heart_image_description_userProfile">Heart Image</string>
    <string name="favorites_text_userProfile">Favorites</string>
    <string name="clear_storage_button_text_userProfile">Clear Storage</string>
    <string name="logout_button_text_userProfile">Logout</string>
    <string name="all_filter_text_wardrobe">All</string>
    <string name="jackets_filter_text_wardrobe">Jackets</string>
    <string name="shirts_filter_text_wardrobe">Shirts</string>
    <string name="pants_filter_text_wardrobe">Pants</string>
    <string name="shoes_filter_text_wardrobe">Shoes</string>
    <string name="empty_message_text_wardrobe">No Clothing Items Saved.</string>
    <string name="wardrobe_item_image_description_wardrobeDetails">Wardrobe Item Image</string>
    <string name="item_name_text_wardrobeDetails">Item Name</string>
    <string name="item_category_text_wardrobeDetails">Item Category</string>
    <string name="edit_button_text_wardrobeDetails">Edit Item</string>
    <string name="delete_button_text_wardrobeDetails">Delete Item</string>
    <string name="back_button_description_wardrobeDetails">Back Button</string>
    <string name="jacket_image_description_outfitCard">Jacket Image</string>
    <string name="shirt_image_description_outfitCard">Shirt Image</string>
    <string name="randomly_selected_jacket_description_outfitCard">Randomly Selected Jacket</string>
    <string name="randomly_selected_shoes_description_outfitCard">Randomly Selected Shoes</string>
    <string name="outfit_name_text_outfitCard">Outfit Name</string>
    <string name="wardrobe_item_image_description_wardrobeCard">Wardrobe Item Image</string>
    <string name="item_name_text_wardrobeCard">Item Name</string>
    <string name="category_text_wardrobeCard">Category</string>
</resources>