<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/ll_1_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/brand_logo_signup"
            android:transitionName="logo_transition"
            android:src="@drawable/logo"
            android:contentDescription="@string/brand_logo_small_desc"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <TextView
            android:id="@+id/header_signup"
            android:transitionName="header_transition"
            android:text="@string/header_signup_text"
            android:fontFamily="@font/poppins_black_italic"
            android:textColor="@color/primary_color_variant"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/subhead_signup"
            android:text="@string/subhead_signup_text"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_signup"
            android:hint="@string/username_signup_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/grey"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_num_signup"
            android:hint="@string/phone_num_signup_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/call_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/grey"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_signup"
            android:hint="@string/email_signup_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mail_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/grey"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_signup"
            android:hint="@string/password_signup_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/grey"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_conf_signup"
            android:hint="@string/password_conf_signup_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create_acc_signup"
            android:text="@string/btn_create_acc_signup_text"
            android:textColor="@color/cream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_signup"
        android:background="#00000000"
        android:text="@string/btn_login_signup_text"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_1_signup"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>