<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_on_color"
    tools:context=".OutfitDetails">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Outfit Image -->
            <LinearLayout
                android:id="@+id/outfit_layout_outfitDetails"
                android:layout_width="0dp"
                android:layout_height="500dp"
                android:layout_margin="20dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/background_color"
                android:elevation="4dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/jacket_image_outfitDetails"
                        android:contentDescription="@string/jacket_image_description_outfitDetails"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:src="@drawable/hanger_24dp"
                        android:scaleType="fitCenter"/>
                    <ImageView
                        android:id="@+id/shirt_image_outfitDetails"
                        android:contentDescription="@string/shirt_image_description_outfitDetails"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:src="@drawable/hanger_24dp"
                        android:scaleType="fitCenter"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/pants_image_outfitDetails"
                        android:contentDescription="@string/pants_image_description_outfitDetails"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:src="@drawable/hanger_24dp"
                        android:scaleType="fitCenter"/>
                    <ImageView
                        android:id="@+id/shoes_image_outfitDetails"
                        android:contentDescription="@string/shoes_image_description_outfitDetails"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:src="@drawable/hanger_24dp"
                        android:scaleType="fitCenter"/>
                </LinearLayout>
            </LinearLayout>
            <!-- Outfit Details -->
            <LinearLayout
                android:id="@+id/details_layout_outfitDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/outfit_layout_outfitDetails"
                app:layout_constraintStart_toStartOf="@id/outfit_layout_outfitDetails">
                <TextView
                    android:id="@+id/outfit_name_outfitDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/poppins_black_italic"
                    android:text="@string/outfit_name_text_outfitDetails"
                    android:textColor="@color/secondary_on_color"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/outfit_date_outfitDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:fontFamily="@font/poppins_extralight"
                    android:text="@string/outfit_saved_date_text_outfitDetails"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Edit Name -->
            <Button
                android:id="@+id/editName_button_outfitDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/edit_name_button_text_outfitDetails"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/outfit_layout_outfitDetails"
                app:layout_constraintBottom_toBottomOf="@id/details_layout_outfitDetails"
                app:layout_constraintEnd_toEndOf="@id/outfit_layout_outfitDetails"/>
            <!-- Delete Outfit -->
            <Button
                android:id="@+id/delete_button_outfitDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:text="@string/delete_outfit_button_text_outfitDetails"
                android:textColor="@color/secondary_on_color"
                app:layout_constraintTop_toBottomOf="@id/details_layout_outfitDetails"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/outfit_layout_outfitDetails"
                app:layout_constraintEnd_toEndOf="@id/outfit_layout_outfitDetails" />
            <!-- Back -->
            <ImageButton
                android:id="@+id/back_button_outfitDetails"
                android:contentDescription="@string/back_button_description_outfitDetails"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_24dp"
                android:backgroundTint="@color/dark_blue"
                android:elevation="4dp"
                android:src="@drawable/back_24dp"
                android:scaleType="center"
                app:layout_constraintTop_toTopOf="@id/outfit_layout_outfitDetails"
                app:layout_constraintStart_toStartOf="@id/outfit_layout_outfitDetails"/>
            <!-- Favorite -->
            <ImageButton
                android:id="@+id/favorite_button_outfitDetails"
                android:contentDescription="@string/favorite_button_description_outfitDetails"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/circle_24dp"
                android:elevation="4dp"
                android:src="@drawable/favorite_24dp"
                android:scaleType="center"
                app:layout_constraintTop_toTopOf="@id/outfit_layout_outfitDetails"
                app:layout_constraintEnd_toEndOf="@id/outfit_layout_outfitDetails"
                app:tint="@color/dark_blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>