<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    android:background="@color/background_color"
    app:strokeWidth="1dp"
    app:strokeColor="@color/primary_color_variant">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/jacket_outfitCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:scaleType="centerCrop"
                    android:background="@android:color/transparent"
                    android:src="@drawable/hanger_24dp"
                    android:contentDescription="@string/jacket_image_description_outfitCard"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/shirt_outfitCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:scaleType="centerCrop"
                    android:background="@android:color/transparent"
                    android:src="@drawable/hanger_24dp"
                    android:contentDescription="@string/shirt_image_description_outfitCard"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/pants_outfitCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:scaleType="centerCrop"
                    android:background="@android:color/transparent"
                    android:src="@drawable/hanger_24dp"
                    android:contentDescription="@string/randomly_selected_jacket_description_outfitCard"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/shoes_outfitCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:scaleType="centerCrop"
                    android:background="@android:color/transparent"
                    android:src="@drawable/hanger_24dp"
                    android:contentDescription="@string/randomly_selected_shoes_description_outfitCard"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/name_outfitCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="10dp"
            android:paddingVertical="6dp"
            android:text="@string/outfit_name_text_outfitCard"
            android:textColor="@color/secondary_on_color"
            android:fontFamily="@font/poppins_extrabold"/>

    </FrameLayout>

</com.google.android.material.card.MaterialCardView>