<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    android:background="@color/background_color"
    app:strokeWidth="1dp"
    app:strokeColor="@color/primary_color_variant">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_wardrobeCard"
            android:contentDescription="@string/wardrobe_item_image_description_wardrobeCard"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:src="@drawable/hanger_24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="10dp"
            android:paddingVertical="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_wardrobeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name_text_wardrobeCard"
                android:textColor="@color/secondary_on_color"
                android:fontFamily="@font/poppins_extrabold"/>

            <TextView
                android:id="@+id/category_wardrobeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_text_wardrobeCard"
                android:textSize="12sp"
                android:textColor="@color/secondary_on_color"
                android:fontFamily="@font/poppins_extrabold"/>

        </LinearLayout>

    </FrameLayout>

</com.google.android.material.card.MaterialCardView>