<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color_variant"
    tools:context=".MainActivity">

    <ImageView
    android:id="@+id/brand_logo_main"
    android:transitionName="logo_transition"
    android:src="@drawable/logo"
    android:contentDescription="@string/brand_logo_main_desc"
    android:layout_width="0dp"
    android:layout_height="400dp"
    android:layout_marginBottom="100dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagline_main_1"
        android:transitionName="header_transition"
        android:text="@string/tagline_main_1_text"
        android:fontFamily="@font/poppins_black_italic"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textColor="@color/primary_color_variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_logo_main"/>

    <TextView
        android:id="@+id/tagline_main_2"
        android:text="@string/tagline_main_2_text"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/primary_color_variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagline_main_1"/>

</androidx.constraintlayout.widget.ConstraintLayout>