<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_on_color"
    tools:context=".Outfits">

    <TextView
        android:id="@+id/title_outfits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins_black_italic"
        android:text="@string/outfits_header_text_outfits"
        android:textSize="30sp"
        android:textColor="@color/secondary_on_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/query_view_outfits"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/title_outfits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_outfits"
            android:hint="@string/search_hint_outfits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:startIconDrawable="@drawable/search_24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="44dp"
                android:paddingEnd="0dp"
                android:inputType="textFilter" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/outfits_recycler_outfits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-40dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/query_view_outfits"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_outfits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/empty_message_outfits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_message_text_outfits"
        android:textColor="@color/secondary_on_color"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/outfits_recycler_outfits"
        app:layout_constraintBottom_toBottomOf="@id/outfits_recycler_outfits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_outfits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottom_background"
        app:layout_constraintTop_toTopOf="@id/bottom_nav_outfits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>